--- a/_posts/2019-12-21-the-us-narrative-today.html
+++ b/_posts/2019-12-21-the-us-narrative-today.html
@@ -1608,107 +1608,107 @@ stories:
   domain: http://www.westword.com/
   link: https://www.westword.com/marijuana/denver-colorado-springs-pot-lounges-first-to-apply-for-state-licenses-11581712
 images:
-- name: copper-circuit-old-building-phoenix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-old-building-phoenix.jpg
-- name: nazi-invasion-razor-wire-buildings.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-razor-wire-buildings.jpg
-- name: copper-circuit-cargo-ship_36587814601_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-cargo-ship_36587814601_o.jpg
-- name: walled-garden-walled-garden-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-kand-two.jpg
-- name: beach-rocks-beach-rocks-currents-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-alberto-giacometti.jpg
-- name: crow-crow-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-purple-storm.jpg
-- name: downtheline-downtheline-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-blue-circuit.jpg
-- name: oldcabin-store-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-kandinsky-bv.jpg
-- name: dragon_close-up-scream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon_close-up-scream.jpg
-- name: downtown-trucksilo-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-aqua.jpg
-- name: oldtrain-oldtrain-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-alien-goggles.jpg
-- name: cargo-ship-cargo-ship-on-sea-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-kandinsky-bv.jpg
-- name: stalin-time-dark-tower-of-london.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-dark-tower-of-london.jpg
-- name: bluelake-oily-mcoilface-file-00-00-38-67.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-oily-mcoilface-file-00-00-38-67.jpg
-- name: gears-4882162452-fa3126b38d-b-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-colored-circuits.jpg
-- name: containership-containership-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-ww2-color.jpg
-- name: la-muse-freeway-carss-overpass.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-freeway-carss-overpass.jpg
-- name: aws-s3-square-containership-dark-dali-square.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-containership-dark-dali-square.jpg
-- name: beach-rocks-beach-rocks-currents-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-alien-goggles.jpg
-- name: nazi-invasion-waterfall-southern-oregon.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-waterfall-southern-oregon.jpg
-- name: curtain-curtain-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-atari-asteroids.jpg
-- name: old-barn-old-barn-1500-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-alien-goggles.jpg
-- name: razorwire-DSC-0080-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-kand-two.jpg
-- name: window-window-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-blue-brush.jpg
-- name: server-cloud-server-racks-clouds-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-smooth-ride.jpg
-- name: yosemite-yosemite-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-wols.jpg
-- name: oldhousecars-house-old-cars-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-purple-storm.jpg
-- name: abandonedbuildings_matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_matrix.jpg
-- name: nazi-invasion-rocking-chair-on-porch_36332220150_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-rocking-chair-on-porch_36332220150_o.jpg
-- name: fence-mexico-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-crafty-painting.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-post-modern.jpg
+- name: stalin-time-city-vancouver-clouds.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-city-vancouver-clouds.jpg
+- name: old-cabin-oldcabin-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-sunday.jpg
 - name: oldbarn-oldbarn-spagetti-accident.jpg
   url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-spagetti-accident.jpg
-- name: blossombar-space-pizza-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-space-pizza-file-00-00-00-00.jpg
-- name: death-valley-death-valley-national-park-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-neo-instinct.jpg
-- name: server-cloud-server-racks-clouds-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-ww2-color.jpg
-- name: nazi-invasion-ellis-island-windows.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-ellis-island-windows.jpg
-- name: downtown-trucksilo-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-constitution.jpg
-- name: udnie-IMG_4833.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_4833.jpg
-- name: white-house-lawn-white-house-window-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-atari-asteroids.jpg
-- name: copper-circuit-IMG_7936.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-IMG_7936.jpg
-- name: old-granary-field-granaryfield-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-constitution.jpg
-- name: braceros-domingo-ulloa-old-piano-paris-hospital.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-old-piano-paris-hospital.jpg
-- name: old-granary-field-granaryfield-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-purp-paper.jpg
-- name: white-house-lawn-white-house-window-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-crabapple.jpg
-- name: bluelake-gan-vogh-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-gan-vogh-file-00-00-00-00.jpg
-- name: yuma-bank-yuma-bak-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yuma-bank-yuma-bak-alien-goggles.jpg
-- name: stalin-time-oxoford-circus-station.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-oxoford-circus-station.jpg
-- name: mediterranean-mediterranean-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-dark-rain.jpg
-- name: eduardo-eduardo-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-dark-rain.jpg
-- name: aws-s3-square-C106VpCVQAEkHqy-square.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-C106VpCVQAEkHqy-square.jpg
-- name: bf-skinner-subway-brooklyn-station.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-subway-brooklyn-station.jpg
+- name: old-house-oldhouse-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-monet-one.jpg
+- name: old-church-oldchurch-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-sunday.jpg
+- name: server-cloud-server-racks-clouds-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-blue-circuit.jpg
+- name: school-clouds-church-clouds-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-wols.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-yellow-collage.jpg
+- name: white-house-lawn-white-house-lawn-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-deep-connections.jpg
+- name: old-house-oldhouse-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-colorful-dream.jpg
+- name: old-church-oldchurch-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-matrix.jpg
+- name: old-school-house-old-schoolhouse-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-marcel-duchamp.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-copper-circuit-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-copper-circuit-2.jpg
+- name: old-cabin-oldcabin-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-hot-spicy.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-oily-mcoilface.jpg
+- name: nazi-invasion-washington-monument-afar.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-washington-monument-afar.jpg
+- name: fence-mexico-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-kandinsky-bv.jpg
+- name: adam-smith-adam-smith-attack-planes.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-attack-planes.jpg
+- name: oldcabin-oldcabin-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-post-modern.jpg
+- name: old-church-oldchurch-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-gan-vogh.jpg
+- name: machine-road-machine-road-free-woman.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-free-woman.jpg
+- name: copper-circuit-statue-with-shield-dark.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-statue-with-shield-dark.jpg
+- name: nazi-invasion-DSC_0017.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-DSC_0017.jpg
+- name: oldhouse-oldhouse-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-purple-pond.jpg
+- name: yuma-bank-yuma-bak-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yuma-bank-yuma-bak-aqua.jpg
+- name: meadowbutterfly-meadow-butterfly-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-dali-two.jpg
+- name: braceros-domingo-ulloa-statue-capital-cannon.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-statue-capital-cannon.jpg
+- name: aws-s3-stories-servers-hallway-door.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-servers-hallway-door.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-plentiful.jpg
+- name: abandonedbuildings_space_pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_space_pizza.jpg
+- name: la-muse-dark-city-buildings.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-dark-city-buildings.jpg
+- name: bf-skinner-seattle-public-market_36725946605_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-seattle-public-market_36725946605_o.jpg
+- name: braceros-domingo-ulloa-statue-of-liberty-back.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-statue-of-liberty-back.jpg
+- name: oldsmallboat-oldsmallboat-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-marcel-duchamp.jpg
+- name: curtain-curtain-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-cinnamon-rolls.jpg
+- name: oldbarn-oldbarn-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-dali-two.jpg
+- name: yosemite-yosemite-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-blue-brush.jpg
+- name: berlinwall-DSC-0084-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-crafty-painting.jpg
+- name: nazi-invasion-hallway-long-hospital.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-hallway-long-hospital.jpg
+- name: locked-up-steam-lock-up-steam-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-spagetti-accident.jpg
+- name: death-valley-death-valley-national-park-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-plentiful.jpg
+- name: machine-road-machine-road-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-kandinsky-bv.jpg
+- name: abe-lincoln-one-purp-paper-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-purp-paper-file-00-00-00-00.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-crunch-paper.jpg
+- name: beach-rocks-beach-rocks-currents-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-graham-sutherland.jpg
+- name: oldcabin-oldcabin-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-crabapple.jpg
+- name: oldhotel-oldhotel-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-creativity.jpg
+- name: server-cloud-server-racks-clouds-blue-circuit-5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-blue-circuit-5.jpg
+- name: gypsymosaic-gypsy-eyes-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-alien-goggles.jpg
+- name: mistywoods-babyfoot-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-gred-mash.jpg
+- name: blossombar-purple-storm-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-purple-storm-file-00-00-00-00.jpg
 ---
 Oregon Senators Speak On Impeachment.&nbsp;Panel Searching For New UMass Boston Chancellor Says Its Making Progress.&nbsp;Slain Barnard College Student Mourned At Private Memorial.&nbsp;Pictures Of The Week Photo Gallery.&nbsp;Lady Patriots Race Past Southern Lee.&nbsp;Doblete De Lukaku Da Al Inter Triunfo Para Alcanzar A Juve.&nbsp;Detroit High School Students Might Get More Sleep With Proposed Change To Start Times.&nbsp;Rape Suspect Charged In Farmington Hills Attack.&nbsp;
